# some_time

./: README.md  index.html  main.py  pyproject.toml  vercel.json
deploy/: main.py  pyscript.toml
some_time/: __init__.py
some_time/domain/: time_counter.py
some_time/inputs/: cookie_memory_adapter.py  input_memory_port.py  web_trigger_adapter.py
some_time/outputs/: cookie_memory_adapter.py  output_display_port.py  web_display_adapter.py
src/: index.html  main.py  pyscript.toml
src/domain/: time_counter.py
src/inputs/: cookie_memory_adapter.py  trigger_port.py  web_trigger_adapter.py
src/outputs/: cookie_memory_adapter.py  output_memory_port.py  web_display_adapter.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_domain.py  test_web_trigger.py  tools.py
