[tool.poetry]
name = "some-time"
version = "0.1.0"
description = "a simple time tracker"
authors = ["Absurd Coyote <absurd_coyote@proton.me>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.test]
cmd = "pytest -n 4 tests"
help   = "Run the test suits"
